src/components/TasksTable/TasksTable.module.css
.table {
}
.table > div:first-child {
  border: none;
  text-transform: uppercase;
  font-weight: 800;
  background: var(--highlight-color);
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  margin-bottom: 0.5rem;
}
.tasks {
  max-height: 70vh;
  overflow: scroll;
}
.tasks::-webkit-scrollbar {
  display: none;
}
.tasks > div:first-child {
  border-top: 2px solid var(--text-color);
}
.tasks > div:last-child {
  border-bottom-left-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}
.arrow {
  display: flex;
  align-items: center;
  justify-content: center;
}

